--- a/public/static/style_management.css
+++ b/public/static/style_management.css
@@ -72,3 +72,31 @@ a {
         text-align: center;
     }
 }
+
+table {
+
+    border: 1px solid rgb(215, 215, 215);
+    border-spacing: 0px;
+    padding: 0px;
+    text-align: center;
+}
+
+th {
+    border-bottom: 1px solid rgb(225, 225, 225);
+    color: #555555;
+}
+
+tr:nth-child(odd) {
+    background-color: #F4F4F4;
+}
+
+td,
+th {
+    min-width: 3em;
+    padding: 4px;
+    overflow: hidden;
+
+    &:not(:last-child) {
+        border-right: 1px solid rgb(225, 225, 225);
+    }
+}
