--- a/public/static/style_management.css
+++ b/public/static/style_management.css
@@ -34,7 +34,7 @@ body {
 
 button,
 input[type="submit"] {
-    font-size: 1.4em;
+    font-size: 1.2em;
     border: 1px solid rgb(180, 180, 180);
     line-height: 30px;
 }
@@ -44,6 +44,12 @@ input[type="password"] {
     font-size: 1.4em;
     border: 1px solid rgb(180, 180, 180);
     line-height: 30px;
+}
+
+input[type="datetime-local"],
+input[type="date"] {
+    border: 1px solid rgb(180, 180, 180);
+    border-radius: 2px;
 }
 
 textarea,
